2008-10-14  Alejandro Pinheiro	 <apinheiro@igalia.com>

	* src/hildon-touch-selector.h:
	Set parent_instance and parent_class as GtkVBox and GtkVboxClass, as
	currently the type definition was using GTK_TYPE_VBOX
	* src/hildon-touch-selector.c:
	Added some implementation notes in order to clarify that any other widget
	added without the column related API will not be included on the
	selection logic, and how the widget is freed, as some people ask about
	it.
	(hildon_touch_selector_remove): Reimplemented in order to free properly
	the column related data when you remove the private hbox.
	* doc/hildon.types: Added the type hildon_touch_selector_column, in order
	to get a proper HildonTouchSelectorColumn documentation

2008-10-13  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-touch-selector-entry.c:
	(hildon_touch_selector_entry_print_func): Return NULL if there is no
	text in the GtkEntry and there is no item selected. Fixes a
	potential crasher.

2008-10-13  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-app-menu-private.h
	* src/hildon-app-menu.[ch]
	* src/hildon-button.[ch]
	* src/hildon-check-button.[ch]
	* src/hildon-entry.[ch]
	* src/hildon-pannable-area.[ch]
	* src/hildon-text-view.[ch]:
	Added private field to the object's structure.

2008-10-13  Claudio Saavedra  <csaavedra@igalia.com>

	* configure.ac: post-release version bump

2008-10-10  Claudio Saavedra  <csaavedra@igalia.com>

	[Release 2.1.14]

	* configure.ac: pre-release version bump
	* NEWS: updates.
	* debian/changelog: updates.

2008-10-10  Claudio Saavedra  <csaavedra@igalia.com>

	* src/hildon-picker-button.c: (hildon_picker_button_finalize):
	Disconnect the handler for HildonTouchSelector::changed.

	(hildon_picker_button_selector_selection_changed): Update the button
	value if the selection change was not triggered by the
	HildonPickerDialog.

	(hildon_picker_button_set_selector): connect to
	HildonTouchSelector::changed.
